kubernetes/grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
spec:
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        fsGroup: 472
        supplementalGroups:
          - 0
      containers:
        - name: grafana
          image: grafana/grafana:9.4.7
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /robots.txt
              port: 3000
              scheme: HTTP
          livenessProbe:
            tcpSocket:
              port: 3000
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: grafana-volume
      volumes:
        - name: grafana-volume
          persistentVolumeClaim:
            claimName: grafana-pvc
